# vita-moonlight

./: CHANGELOG.md  CMakeLists.txt  README.md  SceIniFileProcessor.yml  SceLibc.yml  ScePsp2Compat.yml
libgamestream/: client.c  discover.c  http.c  mkcert.c  sps.c  xml.c
mappings/: pstv.conf  vita.conf
module/source/: main.c
sce_sys/livearea/contents/: template.xml
src/: config.c  config.h  configuration.h  debug.c  device.c  ini.c  ini.h  ini_file_processor_c.h  loop.c  main.c  platform.c  platform.h  util.c
src/audio/: vita.c
src/gui/: guilib.c  guilib.h  ime.c  ime.h  ui.c  ui_connect.c  ui_device.c  ui_settings.c
src/input/: keyboard.c  keyboard.h  mapping.c  vita.c  vita.h
src/power/: vita.c  vita.h
src/video/: vita.c  vita.h
